partners, investors, friends, photos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
         <h4 class='slug'>Deploy every script without worrying about the infrastructure </h4>
       </header>
       <div class="button-action">
-        <a href="#" class="button-start">
+        <a href="/docs/v{{ site.version }}/introduction.html" class="button-start" onclick="mixpanel.track('call to action click');">
           Getting Started
           <span class="mini">* Mac OSX Beta only</span>
         </a>
