--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@ layout: default
 ---
 
 <div id="index">
-
   <section class='section' id="intro">
     <div class="wrapper">
       <div class="brand">
         <a href="{{ site.base_url }}" class='logo'>Infiniteloops LLC</a>
       </div>
       <header class=intro-header>
-        <h2 class="call_to_action">Run every script every minute.</h2>
+        <h2 class="call_to_action">Run every script every <span class="timer"></span></h2>
         <h4 class='slug'>Deploy every script without worrying about the infrastructure </h4>
       </header>
       <div class="button-action">
