--- a/about.html
+++ b/about.html
@@ -9,13 +9,10 @@ layout: default
 
   <h1 class='about-title'>About Infiniteloops</h1>
   <div class="content">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, eveniet provident, magni, qui unde neque libero impedit assumenda ratione consectetur vero necessitatibus velit doloremque. Laborum maiores pariatur, enim iure sapiente.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, eveniet provident, magni, qui unde neque libero impedit assumenda ratione consectetur vero necessitatibus velit doloremque. Laborum maiores pariatur, enim iure sapiente.</p>
+    <p>Infiniteloops is a technological service for developers to speed up  the deployment and execution of process that will run periodically (every minute, every hour, every day or every month). We provide a high-availability compute infrastructure and performs all maintenance tasks for the platform. Developer only needs to focus on code not in infrastructure.</p>
 
+    <p>This idea borned in AngelHack Bogota, it was created by developers for developers. We had the need to deploy small service like scrappers that posted on social networks, ping bots to wake up a heroku server and other periodically tasks. We usually deployed this servers on Heroku or AWS but it was really complicated to do that, now we can do it in an easy way with just some commands and using our loved git we can have the insfrastructure needed.</p>
 
-    <h2>Lorem ipsum dolor sit ame</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, eveniet provident, magni, qui unde neque libero impedit assumenda ratione consectetur vero necessitatibus velit doloremque. Laborum maiores pariatur, enim iure sapiente.</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, eveniet provident, magni, qui unde neque libero impedit assumenda ratione consectetur vero necessitatibus velit doloremque. Laborum maiores pariatur, enim iure sapiente.</p>
   </div>
   <div class="gallerys">
     <div class="gallery-port">
@@ -32,11 +29,8 @@ layout: default
     </div>
   </div>
   <div class="content">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, eveniet provident, magni, qui unde neque libero impedit assumenda ratione consectetur vero necessitatibus velit doloremque. Laborum maiores pariatur, enim iure sapiente.</p>
 
-    <h2>Lorem ipsum dolor sit ame</h2>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, eveniet provident, magni, qui unde neque libero impedit assumenda ratione consectetur vero necessitatibus velit doloremque. Laborum maiores pariatur, enim iure sapiente.</p>
+    <p>Special thanks to AngelHack and DigitalOcean who have supported the project since the beginning with mentoring and infrastructure.</p>
 
     <div class="special-thanks">
       <a href="#">
