--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@ layout: default
       <div class="separe-middle">
         <h3>Focus on your code</h3>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, eligendi, accusamus! Architecto at ipsum facere similique libero exercitationem atque magni. Assumenda, consectetur, voluptates! Obcaecati vero laboriosam reiciendis libero veniam assumenda.</p>
+        <p>Don't stop your ideas, let us handle the infrastructure for you, with InfiniteLoops you just have to code and with a git push your awesome idea will be looping on our servers.</p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, sequi adipisci doloribus vero accusamus.</p>
       </div>
       <div class="separe-middle">
         <img src="/assets/clock.svg" class='middle-img' alt="Focus on your code">
